--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/material-design-icons": "^12.4.0",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "@supabase/supabase-js": "^2.90.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0"
+    "react-native-screens": "^4.19.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
