--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-config": "^1.6.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
